# keda-scaling-demo

./: Dockerfile  README.md  pyproject.toml
consumer/: consumer.py
kubernetes/: config-map.yaml  consumer-deployment.yaml  keda-scaledobject-cpuload.yaml  keda-scaledobject-kafka.yaml  keda-scaledobject-sqs.yaml  kustomization.yaml  producer-deployment.yaml  sqs-secrets.yaml  sqs-trigger-authentication.yaml
producer/: producer.py
